# adventofcode

./: .gitignore  LICENSE  Pipfile  README.md  make_year.sh  pyproject.toml  setup.py
.github/workflows/: update_readme_stars.yml
2018/day1/: solution.py
2018/day10/: solution.py
2018/day11/: solution.py
2018/day12/: solution.py
2018/day13/: solution.py
2018/day2/: solution.py
2018/day3/: solution.py
2018/day4/: solution.py
2018/day5/: solution.py
2018/day6/: solution.py
2018/day8/: solution.py
2018/day9/: solution.py
2019/day1/: part1  part2  solution.py
2019/day10/: solution.py
2019/day11/: solution.py
2019/day12/: solution.py
2019/day13/: solution.py
2019/day14/: solution.py
2019/day15/: solution.py
2019/day16/: solution.py
2019/day17/: solution.py
2019/day18/: solution.py
2019/day19/: solution.py
2019/day2/: solution.py
2019/day20/: solution.py
2019/day21/: solution.py
2019/day22/: solution.py
2019/day23/: solution.py
2019/day24/: solution.py
2020/: make_day.sh
day1/: day1.py  day1_input.json
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py  sample
day14/: day14.py
day15/: day15.py
day17/: day17.py
day19/: day19.py
day2/: day2.py
day20/: day20.py
day21/: day21.py
day23/: day23.py
day24/: day24.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py
day8/: day8.py
day9/: day9.py
src/: aoc_utils.py  cli.py  download.py  get_stars.py  prepare.py  run_solution.py  submit.py  utils.py
year_template/: make_day.sh
(+159 files in other folders)
